Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134441

macOS: keyboard shortcut Meta+D results Ambiguous shortcut

XMLWordPrintable

      When two QAction keyboard shortcuts set on the main window, one for Meta+D (i.e. Ctrl+D on Mac) and one for 'End'. (You'll need a keyboard with extra buttons to test the latter, though you don't need that to reproduce the bug.)

      Run the attached Application Output tab in Qt Creator and press Ctrl+D. An ambiguous shortcut is reported, between Meta+D and End.

      This works with Qt6.6

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            irfan.omair@digia.com Irfan Omair
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change